[web] [fix] chat tab icon alignment and spacing
Summary:
Align the chat tabs per the design. After re-sizing our icons, some of our icon layout css needed to be updated/fixed to match our design.

{F17172}

{F17173}

{F17174}

Test Plan:
Make sure chat tabs visually match the design.

https://www.figma.com/file/a1nkbWgbgjRlrOY9LVurTz/?node-id=1170%3A77104

Reviewers: atul, ashoat

Reviewed By: atul, ashoat

Subscribers: ashoat, palys-swm, Adrian, karol-bisztyga

Differential Revision: https://phabricator.ashoat.com/D3316

--- a/web/chat/chat-tabs.css
+++ b/web/chat/chat-tabs.css
@@ -19,16 +19,14 @@ div.tabs {
 div.tabItem {
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 50%;
   padding: 16px 0;
   text-align: center;
   cursor: pointer;
 }
-div.tabItem span {
-  display: flex;
-}
-div.tabItem span svg {
-  padding-right: 12px;
+div.tabItem svg {
+  padding-right: 8px;
 }
 div.tabItemActive {
   border: outset var(--thread-selection);
